...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5pC-C0-MWe">
                                                    <rect key="frame" x="16" y="13" width="32" height="17"/>
                                                    <constraints>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Create task" id="7NW-Yb-mrR">
                        <barButtonItem key="backBarButtonItem" title="back" id="GhL-kz-4gG"/>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="F7M-yz-hfc">
                            <connections>
                                <action selector="done" destination="gTv-dl-3v2" id="gfV-1e-Pub"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="plI-eg-ahT">
                                                    <rect key="frame" x="16" y="0.0" width="288" height="69.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                    <constraint firstAttribute="width" constant="40" id="ul7-oY-U3J"/>
                                </constraints>
                                <state key="normal" image="add"/>
                                <connections>
                                    <action selector="AddItem:" destination="cYo-ee-2A0" eventType="touchUpInside" id="a4f-9q-IdX"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Events" largeTitleDisplayMode="always" id="hXx-x0-JSR">
                        <barButtonItem key="leftBarButtonItem" title="Menu" id="O63-qQ-Lmk">
                            <connections>
                                <action selector="didTapMenu:" destination="cYo-ee-2A0" id="DtM-Q5-00S"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Today" id="94C-e8-PdH">
                            <connections>
                                <segue destination="GSU-sd-c5H" kind="presentation" identifier="toCalendarSegue" id="7np-fx-gMv"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="Save"/>
                                        <connections>
                                            <action selector="save:" destination="GSU-sd-c5H" eventType="touchUpInside" id="yAm-Iw-RdW"/>
...
