...
        
        if self.taskViewModel.calendar.isDateInToday(self.taskViewModel.selectedDate){
            navigationbar.title = "Today"
        }else if self.taskViewModel.calendar.isDateInTomorrow(self.taskViewModel.selectedDate){
            navigationbar.title = "Tomorrow"
        }else if self.taskViewModel.calendar.isDateInYesterday(self.taskViewModel.selectedDate){
            navigationbar.title = "Yesterday"
        }else{
            navigationbar.title = format.string(from: self.taskViewModel.selectedDate)
        }
        
        
    }
...
